--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="max-height">
 <head>
   <meta charset="utf-8">
   <title>DayCounter</title>
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="max-height">
+  <h1>Bosta</h1>
+  <app-root class="max-height"></app-root>
 </body>
 </html>
